Fortran-glpk/src/glpk.f90

                    integer(c_int) :: glp_print_mip
            end function
            function glp_read_mip(P,fname) bind(C,name="glp_read_mip")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_read_mip
            end function
            function glp_write_mip(P,fname) bind(C,name="glp_write_mip")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_write_mip
            end function
            function glp_bf_exists(P) bind(C,name="glp_bf_exists")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_bf_exists
            end function
            function glp_factorize(P) bind(C,name="glp_factorize")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_factorize
            end function
            function glp_bf_updated(P) bind(C,name="glp_bf_updated")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_bf_updated
            end function
            subroutine glp_get_bfcp(P,parm) bind(C,name="glp_get_bfcp")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: P
                    type(glp_bfcp) :: parm
            end subroutine
            subroutine glp_set_bfcp(P,parm) bind(C,name="glp_set_bfcp")
                use iso_c_binding
                use glpk_types
                    type(c_ptr), value :: P
                    type(glp_bfcp), value :: parm
            end subroutine
            function glp_get_bhead(P,k) bind(C,name="glp_get_bhead")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: k
                    integer(c_int) :: glp_get_bhead
            end function
            function glp_get_row_bind(P,i) bind(C,name="glp_get_row_bind")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    integer(c_int) :: glp_get_row_bind
            end function
            function glp_get_col_bind(P,j) bind(C,name="glp_get_col_bind")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    integer(c_int) :: glp_get_col_bind
            end function
            subroutine glp_ftran(P,x) bind(C,name="glp_ftran")
                use iso_c_binding
                    type(c_ptr), value :: P
                    real(c_double) :: x(*)
            end subroutine
            subroutine glp_btran(P,x) bind(C,name="glp_btran")
                use iso_c_binding
                    type(c_ptr), value :: P
                    real(c_double) :: x(*)
            end subroutine
            function glp_warm_up(P) bind(C,name="glp_warm_up")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_warm_up
            end function
            function glp_eval_tab_row(P,k,ind,val) bind(C,name="glp_eval_tab_row")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: k
                    integer(c_int) :: ind(*)
                    real(c_double) :: val(*)
                    integer(c_int) :: glp_eval_tab_row
            end function
            function glp_eval_tab_col(P,k,ind,val) bind(C,name="glp_eval_tab_col")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: k
                    integer(c_int) :: ind(*)
                    real(c_double) :: val(*)
                    integer(c_int) :: glp_eval_tab_col
            end function
            function glp_transform_row(P,len,ind,val) bind(C,name="glp_transform_row")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: len
                    integer(c_int) :: ind(*)
                    real(c_double) :: val(*)
                    integer(c_int) :: glp_transform_row
            end function
            function glp_transform_col(P,len,ind,val) bind(C,name="glp_transform_col")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: len
                    integer(c_int) :: ind(*)
                    real(c_double) :: val(*)
                    integer(c_int) :: glp_transform_col
            end function
            subroutine glp_init_mpscp(parm) bind(C,name="glp_init_mpscp")
                use iso_c_binding
                use glpk_types
                    type(glp_mpscp) :: parm
            end subroutine
            subroutine glp_init_cpxcp(parm) bind(C,name="glp_init_cpxcp")
                use iso_c_binding
                use glpk_types
                    type(glp_cpxcp) :: parm
            end subroutine
            function glp_read_lp(P,parm,fname) bind(C,name="glp_read_lp")
                use iso_c_binding
                    type(c_ptr), value :: P
                    type(c_ptr), value :: parm
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_read_lp
            end function
            function glp_write_lp(P,parm,fname) bind(C,name="glp_write_lp")
                use iso_c_binding
                    type(c_ptr), value :: P
                    type(c_ptr), value :: parm
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_write_lp
            end function
            function glp_read_prob(P,flags,fname) bind(C,name="glp_read_prob")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: flags
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_read_prob
            end function
            function glp_write_prob(P,flags,fname) bind(C,name="glp_write_prob")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: flags
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_write_prob
            end function
            function glp_mpl_alloc_wksp() bind(C,name="glp_mpl_alloc_wksp")
                use iso_c_binding
                    type(c_ptr) :: glp_mpl_alloc_wksp
            end function
            function glp_mpl_read_model(tran,fname,skip) bind(C,name="glp_mpl_read_model")
                use iso_c_binding
                    type(c_ptr), value :: tran
                    character(c_char) :: fname(*)
                    integer(c_int), value :: skip
                    integer(c_int) :: glp_mpl_read_model
            end function
            function glp_mpl_read_data(tran,fname) bind(C,name="glp_mpl_read_data")
                use iso_c_binding
                    type(c_ptr), value :: tran
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_mpl_read_data
            end function
            function glp_mpl_generate(tran,fname) bind(C,name="glp_mpl_generate")
                use iso_c_binding
                    type(c_ptr), value :: tran
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_mpl_generate
            end function
            subroutine glp_mpl_build_prob(tran,prob) bind(C,name="glp_mpl_build_prob")
                use iso_c_binding
                    type(c_ptr), value :: tran
                    type(c_ptr), value :: prob
            end subroutine
            function glp_mpl_postsolve(tran,prob,sol) bind(C,name="glp_mpl_postsolve")
                use iso_c_binding
                    type(c_ptr), value :: tran
                    type(c_ptr), value :: prob
                    integer(c_int), value :: sol
                    integer(c_int) :: glp_mpl_postsolve
            end function
            subroutine glp_mpl_free_wksp(tran) bind(C,name="glp_mpl_free_wksp")
                use iso_c_binding
                    type(c_ptr), value :: tran
            end subroutine
            function glp_main(argc,argv) bind(C,name="glp_main")
                use iso_c_binding
                    integer(c_int), value :: argc
                    character(c_char) :: argv(*)
                    integer(c_int) :: glp_main
            end function
            function glp_read_cnfsat(P,fname) bind(C,name="glp_read_cnfsat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_read_cnfsat
            end function
            function glp_check_cnfsat(P) bind(C,name="glp_check_cnfsat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_check_cnfsat
            end function
            function glp_write_cnfsat(P,fname) bind(C,name="glp_write_cnfsat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_write_cnfsat
            end function
            function glp_minisat1(P) bind(C,name="glp_minisat1")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_minisat1
            end function
            function glp_intfeas1(P,use_bound,obj_bound) bind(C,name="glp_intfeas1")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: use_bound
                    integer(c_int), value :: obj_bound
                    integer(c_int) :: glp_intfeas1
            end function
            function glp_init_env() bind(C,name="glp_init_env")
                use iso_c_binding
                    integer(c_int) :: glp_init_env
            end function
            function glp_version() bind(C,name="glp_version")
                use iso_c_binding
                    character(c_char) :: glp_version
            end function
            function glp_free_env() bind(C,name="glp_free_env")
                use iso_c_binding
                    integer(c_int) :: glp_free_env
            end function
            subroutine glp_puts(s) bind(C,name="glp_puts")
                use iso_c_binding
                    character(c_char) :: s(*)
            end subroutine
